fix(winnow): handle here-strings (<<<) in command substitutions
When parsing balanced delimiters inside $(...), the parser was incorrectly
trying to treat <<< as a heredoc operator. This caused parsing to fail for
constructs like:

  x=$(
    cmd <<<text
  )

The fix detects <<< and consumes all three '<' characters without adding
to the pending heredocs list, since here-strings don't have a body to
consume like heredocs do.

Added test cases for here-strings in command substitutions.

--- a/brush-shell/tests/cases/compat/here.yaml
+++ b/brush-shell/tests/cases/compat/here.yaml
@@ -251,3 +251,25 @@ cases:
 
   - name: "Tab-stripped here doc eclass pattern"
     stdin: "PYTHON=\"echo\"\nEPREFIX=\"/usr\"\nresult=$(\n\t\"${PYTHON}\" - \"${EPREFIX}\" <<-EOF\n\t\thello from eclass\n\tEOF\n)\necho \"$result\"\n"
+
+  - name: "Here string in command substitution"
+    stdin: |
+      x=$(
+              cat <<<text
+        )
+      echo "x=$x"
+
+  - name: "Here string in command substitution multiline"
+    stdin: |
+      result=$(
+        cat <<<"hello world"
+      )
+      echo "result=$result"
+
+  - name: "Here string with variable in command substitution"
+    stdin: |
+      var=text
+      x=$(
+        cat <<<"$var"
+      )
+      echo "x=$x"
