fix(ci): use correct parser flags for coverage merge
- PEG parser run: use --brush-args=--peg-parser to override default
- Winnow parser run: no brush args needed (it's the default with
  experimental-parser feature)
- Remove invalid --experimental-parser flag that doesn't exist
- Remove redundant --features experimental-parser (already in defaults)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -256,16 +256,18 @@ jobs:
           result=0
 
           # Run tests with PEG parser (accumulates coverage)
+          # Use --peg-parser to override the default Winnow parser
           echo "Running tests with PEG parser..."
-          cargo xtask test integration --coverage --coverage-no-report --coverage-output ./codecov-${VARIANT}.xml || result=$?
+          cargo xtask test integration --coverage --coverage-no-report --coverage-output ./codecov-${VARIANT}.xml \
+            --brush-args=--peg-parser || result=$?
 
           # Run tests with Winnow parser (accumulates more coverage)
           # --coverage-no-clean preserves coverage from PEG run
           # --coverage-no-report skips report generation
+          # Winnow is the default parser, no extra args needed
           echo "Running tests with Winnow parser..."
           cargo xtask test integration --coverage --coverage-no-clean --coverage-no-report \
-            --coverage-output ./codecov-${VARIANT}.xml \
-            --features experimental-parser --brush-args=--experimental-parser || result=$?
+            --coverage-output ./codecov-${VARIANT}.xml || result=$?
 
           # Generate merged coverage report from accumulated data
           echo "Generating merged coverage report..."
